add version to manifest.json

--- a/custom_components/easy_pv/manifest.json
+++ b/custom_components/easy_pv/manifest.json
@@ -10,5 +10,6 @@
   ],
   "requirements": [],
   "iot_class": "cloud_polling",
-  "integration_type": "service"
+  "integration_type": "service",
+  "version": "0.0.1"
 }
